    - "Moon" example has day default value now.
    - Rename "SafeUpload" example as "SafeUploadTransliteration" to refer to the used sub class.
    - Remove "Glyphs_SVG example" because current browsers don't have Arabic Glyphs problem anymore.
    - Check for MING extension in the "Glyphs_SWF" example.
    - Check for SQLite PDO driver in the "City" example.

  
What's new in ArPHP 3.5.0 (release date: Sep 1, 2012)
-----------------------------------------------------

* More accurate gender detection by add some formats like إفتعال and إفعال as 
  well as check the list of most common irregular Arabic female names.

* Transliteration from Arabic to English supports now: UNGEGN, UNGEGN+ (i.e. with
  diacritical marks), RJGC, SES, and ISO 233 standards.

* Enhance "Numbers" sub class to spell ordering numbers in Arabic idiom also.
  
* Add two extra methods to the "CharsetC" sub class to convert Arabic text from UTF-8 
  and ISO-8859-6 charset into HTML entities named as "iso2html" and "utf2html".
  
* "Salat" sub class delivers now extra output format by present times in UNIX timestamp 
  to provide users more flexibility in handle it.

* Tag HTML content if it is belong to a forum using the new "isForum" method in the 
  main "I18N_Arabic" class, currently it recognize only vBulletin.
  
* Fix the transliteration issue of ال precedes a word beginning with one of the
  "sun letters", and issue of ة when it used in combined words to Romanized as 
  t instead of h.

* Fix the question mark issue in the "swapEa" method in the "KeySwap" sub class, thanks
  to Al-Kindi project team <http://www.ar-php.org/stats/al-kindi> who reported this bug.

* Fix the losing new line issue in the "standard" method in the "Standard" sub class, thanks
  to Al-Kindi project team <http://www.ar-php.org/stats/al-kindi> who reported this bug.

* Move out "js" sub directory and keyboard example to keep ArPHP pure PHP library.
